# hw_django

./: README.md  pyproject.toml
hw_project/: db.sqlite3
hw_project/hw_project/: settings.py
hw_project/quotes/: admin.py  forms.py  models.py  urls.py  views.py
hw_project/quotes/migrations/: 0001_initial.py  0002_alter_tag_name.py  0003_alter_tag_name.py
hw_project/quotes/static/quotes/: style.css
hw_project/quotes/templates/quotes/: add_author.html  add_quote.html  author.html  base.html  index.html
hw_project/quotes/templatetags/: __init__.py  extract.py
hw_project/users/: forms.py  urls.py  views.py
hw_project/users/templates/users/: login.html  logout.html  register.html
hw_project/utils/: authors.json  miration.py  quotes.json
