[tool.poetry]
name = "hw-django"
version = "0.1.0"
description = ""
authors = ["Serhii Nesterenko <sy.nesterenko@gmail.com>"]
readme = "README.md"
packages = [{include = "hw_django"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.5"
pymongo = "^4.5.0"
mongoengine = "^0.27.0"
psycopg2 = "^2.9.7"
django-environ = "^0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
